# mazeGame-OpenGL-3D-CPP

./: README.md
Maze_Linux/: CMakeLists.txt  main.cpp  maze.txt
Maze_Linux/images/: square.ppm
Maze_Windows/: CMakeLists.txt  main.cpp
